<resources>
    <string name="folk_1">Chỉ biết véo người, hễ người véo trả rụng rời tay chân.</string>
    <string name="hour">Giờ</string>
    <string name="detail">Chi tiết</string>
    <string name="sunday">CN</string>
    <string name="mon">Hai</string>
    <string name="tus">Ba</string>
    <string name="wes">Tư</string>
    <string name="thurs">Năm</string>
    <string name="six">Sáu</string>
    <string name="sat">Bảy</string>

    <string name="date">Ngày </string>
    <string name="month">Tháng </string>
    <string name="year">Năm </string>
    <string name="hour_chi_can">Giờ %1$d</string>

    //Navigation
    <string name="nav_12_cung">12 cung hoàng đạo</string>
    <string name="nav_setting">Cài Đặt</string>
    <string name="nav_flower_hand">Xem hoa tay</string>
    <string name="nav_share">Chia sẻ</string>
    <string name="nav_calendar">Lịch</string>

    <string-array name="days_sunday_array">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
</resources>
