<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_12_cung"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_12_cung"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_flower_hand"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_flower_hand"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_share"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_setting"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_setting"
        app:showAsAction="ifRoom"/>
</menu>